// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode acp --help 1`] = `
"opencode acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: opencode.local)
                                                                [string] [default: "opencode.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp --help 1`] = `
"opencode mcp

manage MCP (Model Context Protocol) servers

Commands:
  opencode mcp add [name]     add an MCP server
  opencode mcp list           list MCP servers and their status                        [aliases: ls]
  opencode mcp auth [name]    authenticate with an OAuth-enabled MCP server
  opencode mcp logout [name]  remove OAuth credentials for an MCP server
  opencode mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode attach --help 1`] = `
"opencode attach <url>

attach to a running opencode server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to AIGCFROGE_SERVER_PASSWORD)            [string]
  -u, --username      basic auth username (defaults to AIGCFROGE_SERVER_USERNAME or 'opencode')
                                                                                            [string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode run --help 1`] = `
"opencode run [message..]

run opencode with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help                          show help                                            [boolean]
  -v, --version                       show version number                                  [boolean]
      --print-logs                    print logs to stderr                                 [boolean]
      --log-level                     log level [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                          run without external plugins                         [boolean]
      --command                       the command to run, use message for args              [string]
  -c, --continue                      continue the last session                            [boolean]
  -s, --session                       session id to continue                                [string]
      --fork                          fork the session before continuing (requires --continue or
                                      --session)                                           [boolean]
      --share                         share the session                                    [boolean]
  -m, --model                         model to use in the format of provider/model          [string]
      --agent                         agent to use                                          [string]
      --format                        format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file                          file(s) to attach to message                           [array]
      --title                         title for the session (uses truncated prompt if no value
                                      provided)                                             [string]
      --attach                        attach to a running opencode server (e.g.,
                                      http://localhost:4096)                                [string]
  -p, --password                      basic auth password (defaults to AIGCFROGE_SERVER_PASSWORD)
                                                                                            [string]
  -u, --username                      basic auth username (defaults to AIGCFROGE_SERVER_USERNAME or
                                      'opencode')                                           [string]
      --dir                           directory to run in, path on remote server if attaching
                                                                                            [string]
      --port                          port for the local server (defaults to random port if no value
                                      provided)                                             [number]
      --variant                       model variant (provider-specific reasoning effort, e.g., high,
                                      max, minimal)                                         [string]
      --thinking                      show thinking blocks                                 [boolean]
      --dangerously-skip-permissions  auto-approve permissions that are not explicitly denied
                                      (dangerous!)                        [boolean] [default: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode debug --help 1`] = `
"opencode debug

debugging and troubleshooting tools

Commands:
  opencode debug config        show resolved configuration
  opencode debug lsp           LSP debugging utilities
  opencode debug rg            ripgrep debugging utilities
  opencode debug file          file system debugging utilities
  opencode debug scrap         list all known projects
  opencode debug skill         list all available skills
  opencode debug snapshot      snapshot debugging utilities
  opencode debug startup       print startup timing
  opencode debug agent <name>  show agent configuration details
  opencode debug v2            debug v2 catalog and built-in plugins
  opencode debug info          show debug information
  opencode debug paths         show global paths (data, config, cache, state)
  opencode debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers --help 1`] = `
"opencode providers

manage AI providers and credentials

Commands:
  opencode providers list               list providers and credentials                 [aliases: ls]
  opencode providers login [url]        log in to a provider
  opencode providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent --help 1`] = `
"opencode agent

manage agents

Commands:
  opencode agent create  create a new agent
  opencode agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode upgrade --help 1`] = `
"opencode upgrade [target]

upgrade opencode to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode uninstall --help 1`] = `
"opencode uninstall

uninstall opencode and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode serve --help 1`] = `
"opencode serve

starts a headless opencode server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: opencode.local)
                                                                [string] [default: "opencode.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode web --help 1`] = `
"opencode web

start opencode server and open web interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: opencode.local)
                                                                [string] [default: "opencode.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode models --help 1`] = `
"opencode models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode stats --help 1`] = `
"opencode stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode export --help 1`] = `
"opencode export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode import --help 1`] = `
"opencode import <file>

import session data from JSON file or URL

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github --help 1`] = `
"opencode github

manage GitHub agent

Commands:
  opencode github install  install the GitHub agent
  opencode github run      run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode pr --help 1`] = `
"opencode pr <number>

fetch and checkout a GitHub PR branch, then run opencode

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session --help 1`] = `
"opencode session

manage sessions

Commands:
  opencode session list                list sessions
  opencode session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode plugin --help 1`] = `
"opencode plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db --help 1`] = `
"opencode db

database tools

Commands:
  opencode db [query]     open an interactive sqlite3 shell or run a query                 [default]
  opencode db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp list --help 1`] = `
"opencode mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp add --help 1`] = `
"opencode mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp auth --help 1`] = `
"opencode mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  opencode mcp auth list  list OAuth-capable MCP servers and their auth status         [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp logout --help 1`] = `
"opencode mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers list --help 1`] = `
"opencode providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers login --help 1`] = `
"opencode providers login [url]

log in to a provider

Positionals:
  url  opencode auth provider                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers logout --help 1`] = `
"opencode providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent create --help 1`] = `
"opencode agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent list --help 1`] = `
"opencode agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session list --help 1`] = `
"opencode session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session delete --help 1`] = `
"opencode session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github install --help 1`] = `
"opencode github install

install the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github run --help 1`] = `
"opencode github run

run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --event       GitHub mock event to run the agent for                                  [string]
      --token       GitHub personal access token (github_pat_********)                      [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db path --help 1`] = `
"opencode db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge acp --help 1`] = `
"aigcfroge acp

start ACP (Agent Client Protocol) server

选项：
  -h, --help         show help                                                                [布尔]
  -v, --version      show version number                                                      [布尔]
      --print-logs   print logs to stderr                                                     [布尔]
      --log-level    log level                   [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                             [布尔]
      --port         port to listen on                                            [数字] [默认值: 0]
      --hostname     hostname to listen on                            [字符串] [默认值: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                              [布尔] [默认值: false]
      --mdns-domain  custom domain name for mDNS service (default: aigcfroge.local)
                                                                [字符串] [默认值: "aigcfroge.local"]
      --cors         additional domains to allow for CORS                        [数组] [默认值: []]
      --cwd          working directory                       [字符串] [默认值: "<HOME>"]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge mcp --help 1`] = `
"aigcfroge mcp

manage MCP (Model Context Protocol) servers

命令：
  aigcfroge mcp add [name]     add an MCP server
  aigcfroge mcp list           list MCP servers and their status                       [aliases: ls]
  aigcfroge mcp auth [name]    authenticate with an OAuth-enabled MCP server
  aigcfroge mcp logout [name]  remove OAuth credentials for an MCP server
  aigcfroge mcp debug <name>   debug OAuth connection for an MCP server

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge attach --help 1`] = `
"aigcfroge attach <url>

attach to a running aigcfroge server

位置：
  url  http://localhost:4096                                                         [字符串] [必需]

选项：
  -h, --help          show help                                                               [布尔]
  -v, --version       show version number                                                     [布尔]
      --print-logs    print logs to stderr                                                    [布尔]
      --log-level     log level                  [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                            [布尔]
      --dir           directory to run in                                                   [字符串]
  -c, --continue      continue the last session                                               [布尔]
  -s, --session       session id to continue                                                [字符串]
      --fork          fork the session when continuing (use with --continue or --session)     [布尔]
  -p, --password      basic auth password (defaults to AIGCFROGE_SERVER_PASSWORD)           [字符串]
  -u, --username      basic auth username (defaults to AIGCFROGE_SERVER_USERNAME or 'aigcfroge')
                                                                                            [字符串]
      --mini          start the minimal interactive interface                 [布尔] [默认值: false]
      --no-replay     disable mini session history replay on resume and after resize          [布尔]
      --replay-limit  cap visible mini replay to the newest N messages                        [数字]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge run --help 1`] = `
"aigcfroge run [message..]

run aigcfroge with a message

位置：
  message  message to send                                                       [数组] [默认值: []]

选项：
  -h, --help                          show help                                               [布尔]
  -v, --version                       show version number                                     [布尔]
      --print-logs                    print logs to stderr                                    [布尔]
      --log-level                     log level  [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                          run without external plugins                            [布尔]
      --command                       the command to run, use message for args              [字符串]
  -c, --continue                      continue the last session                               [布尔]
  -s, --session                       session id to continue                                [字符串]
      --fork                          fork the session before continuing (requires --continue or
                                      --session)                                              [布尔]
      --share                         share the session                                       [布尔]
  -m, --model                         model to use in the format of provider/model          [字符串]
      --agent                         agent to use                                          [字符串]
      --format                        format: default (formatted) or json (raw JSON events)
                                            [字符串] [可选值: "default", "json"] [默认值: "default"]
  -f, --file                          file(s) to attach to message                            [数组]
      --title                         title for the session (uses truncated prompt if no value
                                      provided)                                             [字符串]
      --attach                        attach to a running aigcfroge server (e.g.,
                                      http://localhost:4096)                                [字符串]
  -p, --password                      basic auth password (defaults to AIGCFROGE_SERVER_PASSWORD)
                                                                                            [字符串]
  -u, --username                      basic auth username (defaults to AIGCFROGE_SERVER_USERNAME or
                                      'aigcfroge')                                          [字符串]
      --dir                           directory to run in, path on remote server if attaching
                                                                                            [字符串]
      --port                          port for the local server (defaults to random port if no value
                                      provided)                                               [数字]
      --variant                       model variant (provider-specific reasoning effort, e.g., high,
                                      max, minimal)                                         [字符串]
      --thinking                      show thinking blocks                                    [布尔]
      --dangerously-skip-permissions  auto-approve permissions that are not explicitly denied
                                      (dangerous!)                            [布尔] [默认值: false]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge debug --help 1`] = `
"aigcfroge debug

debugging and troubleshooting tools

命令：
  aigcfroge debug config        show resolved configuration
  aigcfroge debug lsp           LSP debugging utilities
  aigcfroge debug rg            ripgrep debugging utilities
  aigcfroge debug file          file system debugging utilities
  aigcfroge debug scrap         list all known projects
  aigcfroge debug skill         list all available skills
  aigcfroge debug snapshot      snapshot debugging utilities
  aigcfroge debug startup       print startup timing
  aigcfroge debug agent <name>  show agent configuration details
  aigcfroge debug v2            debug v2 catalog and built-in plugins
  aigcfroge debug info          show debug information
  aigcfroge debug paths         show global paths (data, config, cache, state)
  aigcfroge debug wait          wait indefinitely (for debugging)

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge providers --help 1`] = `
"aigcfroge providers

manage AI providers and credentials

命令：
  aigcfroge providers list               list providers and credentials                [aliases: ls]
  aigcfroge providers login [url]        log in to a provider
  aigcfroge providers logout [provider]  log out from a configured provider

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge agent --help 1`] = `
"aigcfroge agent

manage agents

命令：
  aigcfroge agent create  create a new agent
  aigcfroge agent list    list all available agents

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge upgrade --help 1`] = `
"aigcfroge upgrade [target]

upgrade aigcfroge to the latest or a specific version

位置：
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
  -m, --method      installation method to use
                           [字符串] [可选值: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge uninstall --help 1`] = `
"aigcfroge uninstall

uninstall aigcfroge and remove all related files

选项：
  -h, --help         show help                                                                [布尔]
  -v, --version      show version number                                                      [布尔]
      --print-logs   print logs to stderr                                                     [布尔]
      --log-level    log level                   [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                             [布尔]
  -c, --keep-config  keep configuration files                                 [布尔] [默认值: false]
  -d, --keep-data    keep session data and snapshots                          [布尔] [默认值: false]
      --dry-run      show what would be removed without removing              [布尔] [默认值: false]
  -f, --force        skip confirmation prompts                                [布尔] [默认值: false]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge serve --help 1`] = `
"aigcfroge serve

starts a headless aigcfroge server

选项：
  -h, --help         show help                                                                [布尔]
  -v, --version      show version number                                                      [布尔]
      --print-logs   print logs to stderr                                                     [布尔]
      --log-level    log level                   [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                             [布尔]
      --port         port to listen on                                            [数字] [默认值: 0]
      --hostname     hostname to listen on                            [字符串] [默认值: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                              [布尔] [默认值: false]
      --mdns-domain  custom domain name for mDNS service (default: aigcfroge.local)
                                                                [字符串] [默认值: "aigcfroge.local"]
      --cors         additional domains to allow for CORS                        [数组] [默认值: []]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge web --help 1`] = `
"aigcfroge web

start aigcfroge server and open web interface

选项：
  -h, --help         show help                                                                [布尔]
  -v, --version      show version number                                                      [布尔]
      --print-logs   print logs to stderr                                                     [布尔]
      --log-level    log level                   [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                             [布尔]
      --port         port to listen on                                            [数字] [默认值: 0]
      --hostname     hostname to listen on                            [字符串] [默认值: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                              [布尔] [默认值: false]
      --mdns-domain  custom domain name for mDNS service (default: aigcfroge.local)
                                                                [字符串] [默认值: "aigcfroge.local"]
      --cors         additional domains to allow for CORS                        [数组] [默认值: []]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge models --help 1`] = `
"aigcfroge models [provider]

list all available models

位置：
  provider  provider ID to filter models by                                                 [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
      --verbose     use more verbose model output (includes metadata like costs)              [布尔]
      --refresh     refresh the models cache from models.dev                                  [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge stats --help 1`] = `
"aigcfroge stats

show token usage and cost statistics

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
      --days        show stats for the last N days (default: all time)                        [数字]
      --tools       number of tools to show (default: all)                                    [数字]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[字符串]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge export --help 1`] = `
"aigcfroge export [sessionID]

export session data as JSON

位置：
  sessionID  session id to export                                                           [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
      --sanitize    redact sensitive transcript and file data                                 [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge import --help 1`] = `
"aigcfroge import <file>

import session data from JSON file or URL

位置：
  file  path to JSON file or share URL                                               [字符串] [必需]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge github --help 1`] = `
"aigcfroge github

manage GitHub agent

命令：
  aigcfroge github install  install the GitHub agent
  aigcfroge github run      run the GitHub agent

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge pr --help 1`] = `
"aigcfroge pr <number>

fetch and checkout a GitHub PR branch, then run aigcfroge

位置：
  number  PR number to checkout                                                        [数字] [必需]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge session --help 1`] = `
"aigcfroge session

manage sessions

命令：
  aigcfroge session list                list sessions
  aigcfroge session delete <sessionID>  delete a session

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge plugin --help 1`] = `
"aigcfroge plugin <module>

install plugin and update config

位置：
  module  npm module name                                                            [字符串] [必需]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
  -g, --global      install in global config                                  [布尔] [默认值: false]
  -f, --force       replace existing plugin version                           [布尔] [默认值: false]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge db --help 1`] = `
"aigcfroge db

database tools

命令：
  aigcfroge db [query]     open an interactive sqlite3 shell or run a query                 [默认值]
  aigcfroge db path        print the database path

位置：
  query  SQL query to execute                                                               [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
      --format      Output format                   [字符串] [可选值: "json", "tsv"] [默认值: "tsv"]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge mcp list --help 1`] = `
"aigcfroge mcp list

list MCP servers and their status

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge mcp add --help 1`] = `
"aigcfroge mcp add [name]

add an MCP server

位置：
  name  name of the MCP server                                                              [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
      --url         URL for a remote MCP server                                             [字符串]
      --env         environment variable for a local MCP server (KEY=VALUE)                   [数组]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                           [数组]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge mcp auth --help 1`] = `
"aigcfroge mcp auth [name]

authenticate with an OAuth-enabled MCP server

命令：
  aigcfroge mcp auth list  list OAuth-capable MCP servers and their auth status        [aliases: ls]

位置：
  name  name of the MCP server                                                              [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge mcp logout --help 1`] = `
"aigcfroge mcp logout [name]

remove OAuth credentials for an MCP server

位置：
  name  name of the MCP server                                                              [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge providers list --help 1`] = `
"aigcfroge providers list

list providers and credentials

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge providers login --help 1`] = `
"aigcfroge providers login [url]

log in to a provider

位置：
  url  aigcfroge auth provider                                                              [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
  -p, --provider    provider id or name to log in to (skips provider selection)             [字符串]
  -m, --method      login method label (skips method selection)                             [字符串]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge providers logout --help 1`] = `
"aigcfroge providers logout [provider]

log out from a configured provider

位置：
  provider  provider id or name to log out from                                             [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge agent create --help 1`] = `
"aigcfroge agent create

create a new agent

选项：
  -h, --help                  show help                                                       [布尔]
  -v, --version               show version number                                             [布尔]
      --print-logs            print logs to stderr                                            [布尔]
      --log-level             log level          [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                    [布尔]
      --path                  directory path to generate the agent file                     [字符串]
      --description           what the agent should do                                      [字符串]
      --mode                  agent mode             [字符串] [可选值: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [字符串]
  -m, --model                 model to use in the format of provider/model                  [字符串]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge agent list --help 1`] = `
"aigcfroge agent list

list all available agents

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge session list --help 1`] = `
"aigcfroge session list

list sessions

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
  -n, --max-count   limit to N most recent sessions                                           [数字]
      --format      output format               [字符串] [可选值: "table", "json"] [默认值: "table"]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge session delete --help 1`] = `
"aigcfroge session delete <sessionID>

delete a session

位置：
  sessionID  session ID to delete                                                    [字符串] [必需]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge github install --help 1`] = `
"aigcfroge github install

install the GitHub agent

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge github run --help 1`] = `
"aigcfroge github run

run the GitHub agent

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
      --event       GitHub mock event to run the agent for                                  [字符串]
      --token       GitHub personal access token (github_pat_********)                      [字符串]"
`;

exports[`aigcfroge CLI help-text snapshots every documented command emits stable help text: aigcfroge db path --help 1`] = `
"aigcfroge db path

print the database path

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;
